# Vlanet_v2.0

./: .babelrc.backup  .env.example  .env.production  .env.production.example  .env.vercel  .eslintrc.js  .gitignore  .gitleaks.toml  .lintstagedrc.js  .prettierrc.js  .vercelignore  ADR-001-CORS-Architecture.md  BUG_TRACKING_SYSTEM.md  CLAUDE.md  COMPREHENSIVE_TEST_SCENARIOS.md  CORE_FEATURES.md  CRITICAL_ISSUES_BUG_REPORT.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_TEST_REPORT.md  DESIGN_SYSTEM_ARCHITECTURE.md  MEMORY.md  Procfile  QA_CONTINUOUS_PROCESS.md  QA_TEST_RESOLUTION_REPORT.md  RAILWAY_CLI_COMMANDS.md  RAILWAY_DASHBOARD_FIX.md  RAILWAY_EMERGENCY_FIX.md  RAILWAY_FIX_COMMANDS.txt  RAILWAY_HEALTHCHECK_QA_ANALYSIS.md  RAILWAY_MANUAL_FIX.md  RAILWAY_TERMINAL_FIX.sh  README.md  STORY_DEVELOPMENT_TEST_REPORT.md  UI_COMPONENT_IMPLEMENTATION_GUIDE.md  api-test-results-2025-08-09T13-34-20-405Z.json  cleanup_uncommitted_files.sh  deploy_to_railway.sh  deployment-test-results-1754763780420.json  deployment-test-results-1754764063677.json  deployment_health_check.sh  (+26 more)
vridge_back/: .dockerignore  .env.example  .env.gabia.example  .env.minio  .env.production.example  .env.railway  .env.railway.example  .env.workers.example  .gitignore  .railway-deploy-trigger  ADMIN_CONFIGURATION_REPORT.md  ADMIN_UI_DESIGN_REPORT.md  AI_VIDEO_API_DOCUMENTATION.md  AI_VIDEO_INTEGRATION_GUIDE.md  API_ERROR_ANALYSIS_REPORT.md  API_MODELS_GUIDE.md  BACKEND_MECE_ANALYSIS.md  COMPREHENSIVE_QA_STRATEGY_GUIDE.md  CORS_ARCHITECTURE_DECISION.md  CORS_FIX_GUIDE.md  DALLE_PROMPT_GUIDE.md  DATABASE_RECOVERY_PLAN.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_ENV_VARS.md  Dockerfile  (+256 more)
(+636 files in other folders)
