[tool.poetry]
name = "vridge-backend"
version = "0.1.0"
description = "Video production collaboration platform backend"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.2"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.2.2"
django-cors-headers = "^4.1.0"
psycopg2-binary = "^2.9.6"
channels = "^4.0.0"
channels-redis = "^4.1.0"
daphne = "^4.0.0"
moviepy = "^1.0.3"
sentry-sdk = "^1.26.0"
django-environ = "^0.10.0"
django-redis = "^5.3.0"
django-debug-toolbar = "^4.1.0"
django-extensions = "^3.2.3"
django-silk = "^5.0.3"
gunicorn = "^20.1.0"
celery = "^5.3.1"
redis = "^4.6.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
pytest = "^7.4.0"
pytest-django = "^4.5.2"
factory-boy = "^3.3.0"
coverage = "^7.2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
skip_gitignore = true
skip = ["migrations"]

[tool.coverage.run]
source = "."
omit = [
    "manage.py",
    "*/settings*",
    "*/migrations/*",
    "*/venv/*",
    "*/tests/*",
    "*/__pycache__/*",
]